Record storage cutover validation and before-after benchmark evidence